Update language files

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
@@ -162,8 +162,8 @@ item.charm.seconddurability.tooltip=$0-Chance $1 Haltbarkeit wiederherzustellen
 item.charm.slaughterimpact.tooltip=&0 Schaden in einem $1-Blöcke Radius der Tötung ausgeteilt
 item.charm.cannotstack=Dieses Amulett wird seine Effekte nicht mit\nanderen Amuletten des gleichen Typs stacken!
 entity.hauntedMiner.name=Verhexter Minenarbeiter
-tile.voidChest.name=Void Chest
-tile.endiumOre.name=Endium Erz
+tile.voidChest.name=Leere-Truhe
+tile.endiumOre.name=Endiumerz
 tile.endiumBlock.name=Endium Block
 tile.persegrit.name=Vulkan Gestein
 tile.laboratoryGlass.name=Labor Glas
@@ -190,18 +190,18 @@ item.energyWand.name=Energy Wand
 item.auricion.name=Auricion
 item.rune.any.name=Rune (beliebig)
 entity.endermage.name=Ender Magier
-tile.baconStone.name=Leuchtfeuer Stein
+tile.baconStone.name=Leuchtfeuerstein
 tile.essenceAltar.dragon.bacon.name=Leutfeueressenz-Altar
-tile.transportBeacon.name=Transport Leuchtfeuer
-tile.transportBeacon.bacon.name=Transport Leuchtfeuer
-tile.experienceTable.name=Erfahrungs Tisch
-tile.accumulationTable.name=Accumulation Table
-tile.extractionTable.name=Extraktions Tisch
-tile.endPowderOre.bacon.name=Leuchtfeuer Pulvererz
-tile.endiumOre.bacon.name=Baconium Erz
+tile.transportBeacon.name=Transportleuchtfeuer
+tile.transportBeacon.bacon.name=Transportleuchtfeuer
+tile.experienceTable.name=Erfahrungstisch
+tile.accumulationTable.name=Akumulationstisch
+tile.extractionTable.name=Extraktiostisch
+tile.endPowderOre.bacon.name=Leuchtfeuerpulvererz
+tile.endiumOre.bacon.name=Baconiumerz
 tile.endiumBlock.bacon.name=Leuchtfeuer Block
 tile.endFlower.bacon.name=Todes Leuchtfeuer
-tile.endermanHead.bacon.name=Baconman Head
+tile.endermanHead.bacon.name=Leuchtfeuermann's Kopf
 tile.dungeonPuzzle.rock.name=Verliespuzzle (Fels)
 tile.dungeonPuzzle.ceiling.name=Verliespuzzle (Decke)
 tile.dungeonPuzzle.disabled.name=Verliespuzzle (abgeschaltet)
@@ -224,8 +224,7 @@ item.blankGem.name=Rohling
 item.templeCaller.bacon.name=Leuchtfeuer Rufer
 item.drySplinter.bacon.name=Ausgetrocknetes Leuchtfeuer
 item.ectoplasm.name=Ektoplasma
-item.spectralTear.name=
-Spektrale Tränen
+item.spectralTear.name=Spektrale Tränen
 item.spectralTear.bacon.name=Spektrales Leuchtfeuer
 item.livingMatter.name=Lebens Materie
 item.livingMatter.bacon.name=Leuchtfeuer des Lebens
@@ -277,7 +276,7 @@ key.openCompendium.bacon=Leuchtfeuer Kompendium
 item.corporealMirageOrb.name=Corporeal Mirage Orb
 tile.soulCharm.name=Seelenzauber
 tile.emptySoulCharm.name=Seelenzauber Behälter
-baconizer.bacon=bacon
+baconizer.bacon=Speck
 tile.crossedDecoration.flameweed.name=Feuer Kraut
 tile.crossedDecoration.shadowOrchid.name=Schatten Orchidee
 achievement.viewAchievements=Erfolge anzeigen
@@ -332,17 +331,14 @@ item.charmPouch.info.active=Active
 item.charmPouch.info.inactive=Inactive
 enhancements.clickSelect=Klicken um auszuwählen
 enhancements.clickEnhance=Klicken um zu verbessern
-enhancements.alreadyEnhanced=
-Bereits verbessert
+enhancements.alreadyEnhanced=Bereits verbessert
 compendium.discoveredObject=Unlocked new Knowledge Object
 compendium.cannotBuy=Dieses Objekt kann nicht gekauft werden.
 compendium.nonBuyable=Das Fragment muss an anderer Stelle erworben werden.
-compendium.unfulfilledRequirements=
-Ein weiteres Fragment muss zuerst gekauft werde.
+compendium.unfulfilledRequirements=Ein weiteres Fragment muss zuerst gekauft werde.
 compendium.viewObject=Klicken Sie hier um es zu sehen
 compendium.dataError=Fehler beim Öffnen des Ender Kompendium, dem Server fehlen die erforderlichen Daten. Loggen sie sich wieder ein und  warten Sie einige Sekunden ab, beten sie zu ihrer Lieblingsgottheit und versuche es erneut!
-compendium.smoothText.title=
-Glattes Text-Rendering
+compendium.smoothText.title=Glattes Text-Rendering
 compendium.smoothText.line1=Enable if you experience bad
 compendium.smoothText.line2=Textgröße (Experimentell)
 compendium.smoothText.mode=Modus
