--- a/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
@@ -79,16 +79,16 @@ challenge.title=Défi :
 challenge.difficulty.hard=Difficile
 challenge.difficulty.mediumorhard=Difficulté Normale / Difficile
 tile.decompositionTable.name=Table de décomposition
-tile.energyExtractionTable.name=Table d'extraction d'Énergie
+tile.energyExtractionTable.name=Table d'extraction d'énergie
 tile.ravagedBrick.name=Brique ravagée
-tile.energyCluster.name=Grappe d'Énergie
+tile.energyCluster.name=Grappe d'énergie
 container.enhancedBrewing=Alambic amélioré
 container.decompositionTable=Table de décomposition
 container.energyExtractionTable=Table d'extraction d'énergie
 tile.sphalerite.name=Sphalérite
 tile.sphalerite.stardust.name=Sphalérite contenant poussière d'étoile
 item.spatialDashGem.name=Joyau de transportation linéaire
-item.biomeCompass.name=Boussole à Îles biomes
+item.biomeCompass.name=Boussole à biomes
 achievement.biomeEnchantedIsland=L'île enchantée
 achievement.biomeEnchantedIsland.desc=Visitez l'une des variantes de l'île enchantée
 achievement.transferenceGem=Téléportation enfin
@@ -216,7 +216,7 @@ tile.dungeonPuzzle.distr.square.lit.name=Bloc d'énigme du donjon (Distributeur-
 item.essence.dragon.bacon.name=Essence de bacon
 item.lorePage.bacon.name=Bacon de l'aventurier
 item.altarNexus.bacon.name=Noyau de bacon
-item.endPowder.bacon.name=Poudre de Bacon
+item.endPowder.bacon.name=Poudre de bacon
 item.endiumIngot.bacon.name=Lingot de baconium
 item.potionOfPurity.name=Potion de pureté
 item.potionOfPurity.splash.name=potion volatile de pureté
