Add a Loot Chest

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -38,6 +38,7 @@ tile.decompositionTable.name=Decomposition Table
 tile.experienceTable.name=Experience Table
 tile.accumulationTable.name=Accumulation Table
 tile.extractionTable.name=Extraction Table
+tile.lootChest.name=Loot Chest
 tile.endPowderOre.name=End Powder Ore
 tile.endPowderOre.bacon.name=Bacon Powder Ore
 tile.endiumOre.name=Endium Ore
@@ -274,6 +275,8 @@ container.decompositionTable=Decomposition Table
 container.experienceTable=Experience Table
 container.accumulationTable=Accumulation Table
 container.extractionTable=Extraction Table
+container.lootChest=Loot Chest
+container.lootChest.editing=Loot Chest (Editing)
 container.endPowderEnhancements=End Powder Enhancements
 container.endPowderEnhancements.bacon=Bacon Powder Enhancements
 container.charmPouch=Charm Pouch
