Change Energy Wand to Energy Receptacle (no texture yet)

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -144,8 +144,8 @@ item.arcaneShard.name=Arcane Shard
 item.obsidianFragment.name=Obsidian Fragment
 item.obsidianRod.name=Obsidian Rod
 item.energyWandCore.name=Energy Wand Core
-item.energyWand.name=Energy Wand
-item.energyWand.info.holding=Holding cluster with $ Energy
+item.energyReceptacle.name=Energy Receptacle
+item.energyReceptacle.holding=Holding cluster with $ Energy
 item.auricion.name=Auricion
 item.charmPouch.name=Charm Pouch
 item.charmPouch.info.active=Active
