Add Ethereal Lantern

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -1,6 +1,7 @@
 # DO NOT MODIFY THIS FILE!
 tile.baconStone.name=Bacon Stone
 tile.stoneBrickWall.name=Stone Brick Wall
+tile.etherealLantern.name=Ethereal Lantern
 tile.gloomrock.plain.name=Gloomrock
 tile.gloomrock.smooth.name=Smooth Gloomrock
 tile.gloomrock.brick.name=Gloomrock Brick
