Start updating the Compendium book to new design

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -1,4 +1,6 @@
 # DO NOT MODIFY THIS FILE!
+ec.title.help=Help
+
 ec.title.stronghold=Stronghold
 ec.title.dragonLair=Dragon Lair
 ec.title.endstoneBlob=Endstone Blob
