Work on Amulet of Recovery (gui, code cleanup)

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -300,6 +300,7 @@ compendium.crafting.changed=Recipe was modified by another mod
 compendium.crafting.removed=Recipe was removed by another mod
 
 gui.openHeeTracker=Visit Issue Tracker
+gui.moveAndEquip=Move & Equip
 
 key.openCompendium=Ender Compendium
 key.openCompendium.bacon=Bacon Compendium
