--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -27,6 +27,10 @@ ec.title.enh.tnt=TNT Enhancements
 ec.title.enh.spatialDashGem=Spatial Dash Gem Enhancements
 ec.title.enh.transferenceGem=Transference Gem Enhancements
 
+ec.tooltip.allUnlocked=Completed
+ec.tooltip.allButSecret=Discovered
+ec.tooltip.unreadHint=Hint Available!
+
 ec.reg.0=Welcome to the Ender Compendium, the source of all knowledge about the End!
 ec.reg.1=The Compendium is divided into phases, each contains blocks, items and mobs you can find in that phase.
 ec.reg.2=To reveal information about these objects, you have to discover them or unlock them using Knowledge Points.
