--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -30,6 +30,7 @@ ec.title.enh.transferenceGem=Transference Gem Enhancements
 ec.tooltip.allUnlocked=Completed
 ec.tooltip.allButSecret=Discovered
 ec.tooltip.unreadHint=Hint Available!
+ec.tooltip.essentialOnly=Basic Information
 
 ec.reg.0=Welcome to the Ender Compendium, the source of all knowledge about the End!
 ec.reg.1=The Compendium is divided into phases, each contains blocks, items and mobs you can find in that phase.
