--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -32,6 +32,7 @@ ec.tooltip.allButSecret=Discovered
 ec.tooltip.unreadHint=Hint Available!
 ec.tooltip.hintsOnly=Hints Only
 ec.tooltip.essentialOnly=Basic Information
+ec.tooltip.visibleOnly=Early Information Available
 
 ec.reg.0=Welcome to the Ender Compendium, the source of all knowledge about the End!
 ec.reg.1=The Compendium is divided into phases, each contains blocks, items and mobs you can find in that phase.
