Finish Energy Oracle (Cluster ignore list, missing name)

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -103,6 +103,7 @@ tile.sacredStone.name=Sacred Stone
 item.ethereum.name=Ethereum
 item.ancientDust.name=Ancient Dust
 item.alterationNexus.name=Alteration Nexus
+item.energyOracle.name=Energy Oracle
 item.amuletOfRecovery.name=Amulet of Recovery
 item.essence.dragon.name=Dragon Essence
 item.essence.dragon.bacon.name=Bacon Essence
