--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -22,6 +22,7 @@ tile.gloomrockSmoothSlab.name=Smooth Gloomrock Slab
 tile.gloomrockSmoothStairs.name=Smooth Gloomrock Stairs
 tile.gloomrockBrickSlab.name=Gloomrock Brick Slab
 tile.gloomrockBrickStairs.name=Gloomrock Brick Stairs
+tile.gloomtorch.name=Gloomtorch
 tile.obsidianEnd.name=Falling Obsidian
 tile.obsidianStairs.name=Obsidian Stairs
 tile.obsidianSpecial.smooth.name=Smooth Obsidian
