--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -23,6 +23,7 @@ tile.gloomrockSmoothStairs.name=Smooth Gloomrock Stairs
 tile.gloomrockBrickSlab.name=Gloomrock Brick Slab
 tile.gloomrockBrickStairs.name=Gloomrock Brick Stairs
 tile.gloomtorch.name=Gloomtorch
+tile.endPortalFrame.name=End Portal Frame
 tile.obsidianEnd.name=Falling Obsidian
 tile.obsidianStairs.name=Obsidian Stairs
 tile.obsidianSpecial.smooth.name=Smooth Obsidian
