--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -24,6 +24,7 @@ tile.gloomrockBrickSlab.name=Gloomrock Brick Slab
 tile.gloomrockBrickStairs.name=Gloomrock Brick Stairs
 tile.gloomtorch.name=Gloomtorch
 tile.endPortalFrame.name=End Portal Frame
+tile.darkLoam.name=Dark Loam
 tile.obsidianEnd.name=Falling Obsidian
 tile.obsidianStairs.name=Obsidian Stairs
 tile.obsidianSpecial.smooth.name=Smooth Obsidian
