Add a new brick block for The Hub, and rename Dark Loam texture

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -25,6 +25,7 @@ tile.gloomrockBrickStairs.name=Gloomrock Brick Stairs
 tile.gloomtorch.name=Gloomtorch
 tile.endPortalFrame.name=End Portal Frame
 tile.darkLoam.name=Dark Loam
+tile.ravishBrick.name=Ravish Brick
 tile.obsidianEnd.name=Falling Obsidian
 tile.obsidianStairs.name=Obsidian Stairs
 tile.obsidianSpecial.smooth.name=Smooth Obsidian
