--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -63,6 +63,7 @@ tile.spookyLog.name=Spooky Log
 tile.spookyLeaves.name=Spooky Leaves
 tile.endFlower.name=Death Flower
 tile.endFlower.bacon.name=Death Bacon
+tile.crossedDecoration.ravishBell.name=Ravish Bell
 tile.crossedDecoration.thornyBush.name=Thorny Bush
 tile.crossedDecoration.infestedFern.name=Infested Fern
 tile.crossedDecoration.infestedBush.name=Infested Bush
