--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -24,6 +24,7 @@ tile.gloomrockBrickSlab.name=Gloomrock Brick Slab
 tile.gloomrockBrickStairs.name=Gloomrock Brick Stairs
 tile.gloomtorch.name=Gloomtorch
 tile.endPortalFrame.name=End Portal Frame
+tile.endPortal.name=End Portal
 tile.darkLoam.name=Dark Loam
 tile.darkLoamSlab.name=Dark Loam Slab
 tile.ravishBrick.name=Ravish Brick
