Add classes for Void Portal and Void Portal Frame

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -25,6 +25,8 @@ tile.gloomrockBrickStairs.name=Gloomrock Brick Stairs
 tile.gloomtorch.name=Gloomtorch
 tile.endPortalFrame.name=End Portal Frame
 tile.endPortal.name=End Portal
+tile.voidPortalFrame.name=Void Portal Frame
+tile.voidPortal.name=Void Portal
 tile.darkLoam.name=Dark Loam
 tile.darkLoamSlab.name=Dark Loam Slab
 tile.ravishBrick.name=Ravish Brick
