--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -295,7 +295,8 @@ key.openCompendium=Ender Compendium
 key.openCompendium.bacon=Bacon Compendium
 key.openCompendium.conflict=Ender Compendium key conflicts with $, please fix the issue in Controls menu.
 
-notification.music=Cannot play Hardcore Ender Expansion music disc, custom music is not enabled.
+music.notEnabled=Cannot play Hardcore Ender Expansion music disc, custom music is not enabled.
+music.missingResourcePack=Resource Pack not installed
 
 achievement.viewAchievements=View Achievements
 achievement.viewChallenges=View Challenges
