Add Void Portal items to the creative tab

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -26,7 +26,8 @@ tile.gloomtorch.name=Gloomtorch
 tile.endPortalFrame.name=End Portal Frame
 tile.endPortal.name=End Portal
 tile.voidPortalFrame.name=Void Portal Frame
-tile.voidPortal.name=Void Portal
+tile.voidPortal.travel.name=Void Portal (Travel)
+tile.voidPortal.return.name=Void Portal (Return)
 tile.darkLoam.name=Dark Loam
 tile.darkLoamSlab.name=Dark Loam Slab
 tile.ravishBrick.name=Ravish Brick
